--- a/share/index.html
+++ b/share/index.html
@@ -12,7 +12,7 @@
 <div class="share-demo">
 	<a href="javascript:void(0)" class="share"><img src="images/share-ico.png"/></a>
 </div>
-<script src="http://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+<script src="js/jquery-3.1.1/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="js/share.js"></script>
 <script  type="text/javascript">
 	$('.share').shareConfig({
