修改js引入路径

--- a/jquery-plugs/example/bayWindow.html
+++ b/jquery-plugs/example/bayWindow.html
@@ -6,7 +6,7 @@
     <title>飘窗</title>
     <!-- 引入jquery脚本库，必须 -->
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-    <script type="text/javascript" src="../plug/jquery.bay-window.js"></script>
+    <script type="text/javascript" src="../plug-lib/jquery.bay-window.js"></script>
     <style type="text/css">
         /* 给飘窗添加一些基础样式，如宽度，高度和背景颜色等等 */
         #bay{
